# seamless-boot-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blog.md  gen.py  main.cpp
plymouth/: plymouthd.defaults
plymouth/themes/astra/: astra.plymouth  astra.script
qml/: GroundControl.qml  Main.qml  OrbitTrace.js
qml/fonts/: OFL.txt
